# deprecated-tox4j

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.sbt  checkstyle-config.xml  groups  local.sbt.example  project.config  run-scalabuff  scalastyle-config.xml  testfile.test
projects/tox4j/: CMakeLists.txt  README.md  build.sbt  local.sbt.example
projects/tox4j/android/: build-deps.sh  local.arm-linux-androideabi.sbt  local.i686-linux-android.sbt  protobuf.patch
projects/tox4j/project/: WartRemoverOverrides.scala
projects/tox4j/src/main/cpp/: Tox4j.cpp  cpp14compat.h  jniutil.h
projects/tox4j/src/main/cpp/ToxAv/: ToxAv.cpp  av.cpp  debug.cpp  enums.cpp  lifecycle.cpp
projects/tox4j/src/main/cpp/ToxCore/: ToxCore.cpp  ToxCore.h  clientinfo.cpp  connection.cpp  custom.cpp  debug.cpp  enums.cpp  filetransfer.cpp  friendlist.cpp  interaction.cpp  lifecycle.cpp
projects/tox4j/src/main/cpp/ToxCrypto/: ToxCrypto.cpp  ToxCrypto.h  encryptsave.cpp  hash.cpp  sodium.cpp
projects/tox4j/src/main/cpp/tox/: av.h  common.h  core.cpp  core.h
projects/tox4j/src/main/cpp/tox4j/: Tox4j.h  ToxInstances.h
projects/tox4j/src/main/cpp/util/: debug_log.cpp  debug_log.h  exceptions.cpp  exceptions.h  instance_manager.h  jniutil.h  logging.h  pp_attributes.h  pp_cat.h  unused.h  wrap_void.h
projects/tox4j/src/main/ocaml/core/: echoRequest.ml  main.ml  message.mli
projects/tox4j/src/main/protobuf/: Av.proto  Core.proto  ProtoLog.proto
projects/tox4j/src/test/cpp/: CMakeLists.txt  mock_jni.cpp
projects/tox4j/src/test/cpp/tox/: dummy.cpp
projects/tox4j/src/test/java/: TestClient.scala  scalastyle-config.xml
projects/tox4j/src/test/java/gnieh/pp/: Doc.scala  Renderer.scala  SimpleDoc.scala  package.scala
projects/tox4j/tools/cmake/: FindGlog.cmake
src/main/c/: CMakeLists.txt  JTox.c
src/main/cpp/: CMakeLists.txt  JTox.cpp  Tox4j.cpp  Tox4j.h  clientinfo.cpp  connection.cpp  core.cpp  cpp14compat.h  custom.cpp  filetransfer.cpp  friendlist.cpp  interaction.cpp  jniutil.h  lifecycle.cpp  loadsave.cpp  playground.cpp
src/main/cpp/ToxAv/: ToxAv.cpp  ToxAv.h  av.cpp  lifecycle.cpp
src/main/cpp/ToxCore/: ToxCore.cpp  ToxCore.h  clientinfo.cpp  connection.cpp  crypto.cpp  custom.cpp  filetransfer.cpp  friendlist.cpp  interaction.cpp  lifecycle.cpp  playground.cpp
src/main/cpp/ToxCrypto/: ToxCrypto.cpp  ToxCrypto.h  encryptsave.cpp  hash.cpp
src/main/cpp/lwt/: event_loop.cpp  event_loop.h  io.cpp  io.h  logging.cpp  logging.h  optional.h  partial.h  tuple_util.h  types.h  variant.h
src/main/cpp/tox/: av.cpp  av.h  av_compat.h  av_uncompat.h  common.h  compat.h  core.c  core.cpp  core.h  core_compat.h  core_private.h  core_uncompat.h  logging.cpp  logging.h  uncompat.h
src/main/cpp/tox/core/: CryptoBox.cpp  CryptoBox.h  DhtPacket.cpp  DhtPacket.h  EchoRequest.cpp  EchoRequest.h  EchoResponse.cpp  EchoResponse.h  IPAddress.cpp  IPAddress.h  KeyPair.cpp  KeyPair.h  Logging.cpp  Logging.h  Message.cpp  Message.h  Network.cpp  NetworkAddress.cpp  NetworkAddress.h  NodesRequest.cpp  NodesRequest.h  NodesResponse.cpp  NodesResponse.h  Nonce.cpp  Nonce.h  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h  Partial.h  Status.h  tuple_util.h  types.cpp  types.h  variant.h
src/main/cpp/tox/core/Packet/: Format.h  arguments.h  constructor.h  decoder.h  encoder.h
src/main/cpp/tox4j/: ErrorHandling.cpp  ErrorHandling.h  Tox4j.cpp  Tox4j.h  ToxInstances.cpp  ToxInstances.h  tox_traits.h  with_instance.h
src/main/cpp/util/: exceptions.cpp  exceptions.h  freelist.h  instance_manager.h  logging.cpp  pp_cat.h  synchronised.h  to_string.h
src/main/java/: CMakeLists.txt  scalastyle-config.xml
src/main/java/im/tox/client/: ToxClient.scala
src/main/java/im/tox/dht/: Node.java  NodeProvider.java  NodeValidator.java  ParseException.java
src/main/java/im/tox/dht/fetcher/: FileNodeFetcher.java  InMemoryNodeFetcher.java  NodeFetcher.java  StringNodeFetcher.java  UrlNodeFetcher.java
src/main/java/im/tox/dht/parser/: JsonNodeParser.java  NodeParser.java
src/main/java/im/tox/tox4j/: AbstractToxCore.java  JavaLibraryPath.java  Tox4j.java  ToxAV.java  ToxAvImpl.java  ToxConstants.java  ToxCore.java  ToxCoreImpl.java  ToxImplBase.scala  ToxOptions.java  ToxSimpleChat.java  mkexceptions  package.scala
src/main/java/im/tox/tox4j/annotations/: NotNull.java  Nullable.java
src/main/java/im/tox/tox4j/av/: AbstractToxAv.java  ToxAv.java  ToxAv.scala
src/main/java/im/tox/tox4j/callbacks/: ActionCallback.java  ConnectionStatusCallback.java  FileControlCallback.java  FileReceiveCallback.java  FileReceiveChunkCallback.java  FileRequestChunkCallback.java  FileSendChunkCallback.java  FriendActionCallback.java  FriendConnectedCallback.java  FriendConnectionStatusCallback.java  FriendLosslessPacketCallback.java  FriendLossyPacketCallback.java  FriendMessageCallback.java  FriendNameCallback.java  FriendRequestCallback.java  FriendStatusCallback.java  FriendStatusMessageCallback.java  FriendTypingCallback.java  GroupActionCallback.java  GroupInviteCallback.java  GroupMessageCallback.java  GroupNameListChangeCallback.java  GroupTitleChangeCallback.java  LosslessPacketCallback.java  LossyPacketCallback.java  MessageCallback.java  NameChangeCallback.java  ReadReceiptCallback.java  StatusMessageCallback.java  ToxEventAdapter.java  ToxEventListener.java  TypingChangeCallback.java  UserStatusCallback.java
src/main/java/im/tox/tox4j/core/: AbstractToxCore.java  ToxConstants.java  ToxCore.java  ToxCore.scala  ToxCoreConstants.java  ToxOptions.java  ToxOptions.scala  mkexceptions
src/main/java/im/tox/tox4j/v1/: Tox4j.java  (+1 more)
src/test/cpp/: CMakeLists.txt  main.cpp  mock_jni.h
src/test/cpp/lwt/: io_test.cpp  lwt_partial_test.cpp  partial_test.cpp  variant_test.cpp
src/test/cpp/tox/: dummy.cpp
src/test/cpp/tox/core/: CryptoBox_test.cpp  NetworkAddress_test.cpp  Network_test.cpp  Nonce_test.cpp  PacketHandler_test.cpp  Packet_test.cpp  Partial_test.cpp  UDP_test.cpp  Variant_test.cpp
src/test/cpp/util/: freelist.cpp  instance_manager.cpp
(+930 files in other folders)
